crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__typing-only-third-party-import_runtime_evaluated_decorator_classes_2.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
snapshot_kind: text
---
runtime_evaluated_decorator_classes_2.py:10:8: TC002 [*] Move third-party import `numpy` into a type-checking block
   |
 8 | from example import DecoratingClass
 9 | 
10 | import numpy  # TC002
   |        ^^^^^ TC002
11 | 
12 | app1 = fastapi.FastAPI("First application")
   |
   = help: Move into type-checking block

ℹ Unsafe fix
7  7  | from fastapi import FastAPI as Api
8  8  | from example import DecoratingClass
9  9  | 
10    |-import numpy  # TC002
   10 |+from typing import TYPE_CHECKING
   11 |+
   12 |+if TYPE_CHECKING:
   13 |+    import numpy
11 14 | 
12 15 | app1 = fastapi.FastAPI("First application")
13 16 | app2 = Api("Second application")
