crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__typing_import_after_usage.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC002 [*] Make third-party import `pandas` lazy
 --> <filename>:4:18
  |
2 | from __future__ import annotations
3 |
4 | import pandas as pd
  |                  ^^
5 |
6 | def f(x: pd.DataFrame):
  |
help: Convert to a lazy import (or move into a type-checking block)
  |
3 |
  - import pandas as pd
4 + lazy import pandas as pd
5 |
  |
note: This is an unsafe fix and may change runtime behavior
