crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__unquoted-type-alias_TCH007.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TCH007.py:15:16: TCH007 [*] Add quotes to type alias
   |
13 | a: TypeAlias = int  # OK
14 | b: TypeAlias = Dict  # OK
15 | c: TypeAlias = Foo   # TCH007
   |                ^^^ TCH007
16 | d: TypeAlias = Foo | None  # TCH007
17 | e: TypeAlias = OptStr   # TCH007
   |
   = help: Add quotes

ℹ Unsafe fix
12 12 | 
13 13 | a: TypeAlias = int  # OK
14 14 | b: TypeAlias = Dict  # OK
15    |-c: TypeAlias = Foo   # TCH007
   15 |+c: TypeAlias = "Foo"   # TCH007
16 16 | d: TypeAlias = Foo | None  # TCH007
17 17 | e: TypeAlias = OptStr   # TCH007
18 18 | f: TypeAlias = Bar   # TCH007

TCH007.py:16:16: TCH007 [*] Add quotes to type alias
   |
14 | b: TypeAlias = Dict  # OK
15 | c: TypeAlias = Foo   # TCH007
16 | d: TypeAlias = Foo | None  # TCH007
   |                ^^^ TCH007
17 | e: TypeAlias = OptStr   # TCH007
18 | f: TypeAlias = Bar   # TCH007
   |
   = help: Add quotes

ℹ Unsafe fix
13 13 | a: TypeAlias = int  # OK
14 14 | b: TypeAlias = Dict  # OK
15 15 | c: TypeAlias = Foo   # TCH007
16    |-d: TypeAlias = Foo | None  # TCH007
   16 |+d: TypeAlias = "Foo | None"  # TCH007
17 17 | e: TypeAlias = OptStr   # TCH007
18 18 | f: TypeAlias = Bar   # TCH007
19 19 | g: TypeAlias = Foo | Bar  # TCH007 x2

TCH007.py:17:16: TCH007 [*] Add quotes to type alias
   |
15 | c: TypeAlias = Foo   # TCH007
16 | d: TypeAlias = Foo | None  # TCH007
17 | e: TypeAlias = OptStr   # TCH007
   |                ^^^^^^ TCH007
18 | f: TypeAlias = Bar   # TCH007
19 | g: TypeAlias = Foo | Bar  # TCH007 x2
   |
   = help: Add quotes

ℹ Unsafe fix
14 14 | b: TypeAlias = Dict  # OK
15 15 | c: TypeAlias = Foo   # TCH007
16 16 | d: TypeAlias = Foo | None  # TCH007
17    |-e: TypeAlias = OptStr   # TCH007
   17 |+e: TypeAlias = "OptStr"   # TCH007
18 18 | f: TypeAlias = Bar   # TCH007
19 19 | g: TypeAlias = Foo | Bar  # TCH007 x2
20 20 | h: TypeAlias = Foo[str]  # TCH007

TCH007.py:18:16: TCH007 [*] Add quotes to type alias
   |
16 | d: TypeAlias = Foo | None  # TCH007
17 | e: TypeAlias = OptStr   # TCH007
18 | f: TypeAlias = Bar   # TCH007
   |                ^^^ TCH007
19 | g: TypeAlias = Foo | Bar  # TCH007 x2
20 | h: TypeAlias = Foo[str]  # TCH007
   |
   = help: Add quotes

ℹ Unsafe fix
15 15 | c: TypeAlias = Foo   # TCH007
16 16 | d: TypeAlias = Foo | None  # TCH007
17 17 | e: TypeAlias = OptStr   # TCH007
18    |-f: TypeAlias = Bar   # TCH007
   18 |+f: TypeAlias = "Bar"   # TCH007
19 19 | g: TypeAlias = Foo | Bar  # TCH007 x2
20 20 | h: TypeAlias = Foo[str]  # TCH007
21 21 | 

TCH007.py:19:16: TCH007 [*] Add quotes to type alias
   |
17 | e: TypeAlias = OptStr   # TCH007
18 | f: TypeAlias = Bar   # TCH007
19 | g: TypeAlias = Foo | Bar  # TCH007 x2
   |                ^^^ TCH007
20 | h: TypeAlias = Foo[str]  # TCH007
   |
   = help: Add quotes

ℹ Unsafe fix
16 16 | d: TypeAlias = Foo | None  # TCH007
17 17 | e: TypeAlias = OptStr   # TCH007
18 18 | f: TypeAlias = Bar   # TCH007
19    |-g: TypeAlias = Foo | Bar  # TCH007 x2
   19 |+g: TypeAlias = "Foo | Bar"  # TCH007 x2
20 20 | h: TypeAlias = Foo[str]  # TCH007
21 21 | 
22 22 | type C = Foo   # OK

TCH007.py:19:22: TCH007 [*] Add quotes to type alias
   |
17 | e: TypeAlias = OptStr   # TCH007
18 | f: TypeAlias = Bar   # TCH007
19 | g: TypeAlias = Foo | Bar  # TCH007 x2
   |                      ^^^ TCH007
20 | h: TypeAlias = Foo[str]  # TCH007
   |
   = help: Add quotes

ℹ Unsafe fix
16 16 | d: TypeAlias = Foo | None  # TCH007
17 17 | e: TypeAlias = OptStr   # TCH007
18 18 | f: TypeAlias = Bar   # TCH007
19    |-g: TypeAlias = Foo | Bar  # TCH007 x2
   19 |+g: TypeAlias = "Foo | Bar"  # TCH007 x2
20 20 | h: TypeAlias = Foo[str]  # TCH007
21 21 | 
22 22 | type C = Foo   # OK

TCH007.py:20:16: TCH007 [*] Add quotes to type alias
   |
18 | f: TypeAlias = Bar   # TCH007
19 | g: TypeAlias = Foo | Bar  # TCH007 x2
20 | h: TypeAlias = Foo[str]  # TCH007
   |                ^^^ TCH007
21 | 
22 | type C = Foo   # OK
   |
   = help: Add quotes

ℹ Unsafe fix
17 17 | e: TypeAlias = OptStr   # TCH007
18 18 | f: TypeAlias = Bar   # TCH007
19 19 | g: TypeAlias = Foo | Bar  # TCH007 x2
20    |-h: TypeAlias = Foo[str]  # TCH007
   20 |+h: TypeAlias = "Foo[str]"  # TCH007
21 21 | 
22 22 | type C = Foo   # OK
23 23 | type D = Foo | None  # OK
